--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@faker-js/faker": "^8.4.1",
 		"@sveltejs/adapter-node": "^5.2.0",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.396.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
